--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         <script src="_static/jquery.js"></script>
         <script src="_static/underscore.js"></script>
         <script src="_static/doctools.js"></script>
+        <script src="_static/language_data.js"></script>
     
     <script type="text/javascript" src="_static/js/theme.js"></script>
 
@@ -677,7 +678,7 @@ United States and other countries.</p>
   <div role="contentinfo" class="copyright">
     <p class="footerinfo">
       <span class="lastupdated">
-        Last updated on March 17, 2021.
+        Last updated on March 22, 2021.
       </span>
 
     </p>
