--- a/vitis-dev-flow.html
+++ b/vitis-dev-flow.html
@@ -43,6 +43,7 @@
         <script src="_static/jquery.js"></script>
         <script src="_static/underscore.js"></script>
         <script src="_static/doctools.js"></script>
+        <script src="_static/language_data.js"></script>
     
     <script type="text/javascript" src="_static/js/theme.js"></script>
 
@@ -563,7 +564,7 @@ functions that you can use to compile/build your own applications</p>
   <div role="contentinfo" class="copyright">
     <p class="footerinfo">
       <span class="lastupdated">
-        Last updated on March 17, 2021.
+        Last updated on March 22, 2021.
       </span>
 
     </p>
