Updated conda install instructions

--- a/genindex.html
+++ b/genindex.html
@@ -452,6 +452,7 @@
  | <a href="#I"><strong>I</strong></a>
  | <a href="#M"><strong>M</strong></a>
  | <a href="#N"><strong>N</strong></a>
+ | <a href="#O"><strong>O</strong></a>
  | <a href="#P"><strong>P</strong></a>
  | <a href="#R"><strong>R</strong></a>
  | <a href="#S"><strong>S</strong></a>
@@ -566,7 +567,13 @@
 </li>
         <li><a href="rst-cpp-docs/class_xilinx_apps_cosinesim_CosineSim.html#index-6">matchTargetVector</a>, <a href="rst-cpp-docs/class_xilinx_apps_cosinesim_CosineSimBase.html#index-6">[1]</a>
 </li>
+        <li><a href="rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-6">operator=</a>
+</li>
+        <li><a href="rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-4">Options</a>, <a href="rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-5">[1]</a>
+</li>
         <li><a href="rst-cpp-docs/struct_xilinx_apps_cosinesim_Result.html#index-3">Result</a>
+</li>
+        <li><a href="rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-7">setXclbinPath</a>, <a href="rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-8">[1]</a>
 </li>
         <li><a href="rst-cpp-docs/class_xilinx_apps_cosinesim_CosineSimBase.html#index-2">startLoadPopulation</a>
 </li>
@@ -666,6 +673,28 @@
   </ul></td>
 </tr></table>
 
+<h2 id="O">O</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    operator=
+
+      <ul>
+        <li><a href="rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-6">function</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    Options
+
+      <ul>
+        <li><a href="rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-4">function</a>, <a href="rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-5">[1]</a>
+</li>
+      </ul></li>
+  </ul></td>
+</tr></table>
+
 <h2 id="P">P</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -705,12 +734,21 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li>
+    setXclbinPath
+
+      <ul>
+        <li><a href="rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-7">function</a>, <a href="rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-8">[1]</a>
+</li>
+      </ul></li>
+      <li>
     similarity
 
       <ul>
         <li><a href="rst-cpp-docs/struct_xilinx_apps_cosinesim_Result.html#index-2">variable</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     startLoadPopulation
 
@@ -718,8 +756,6 @@
         <li><a href="rst-cpp-docs/class_xilinx_apps_cosinesim_CosineSimBase.html#index-2">function</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     struct
 
@@ -771,6 +807,8 @@
 </li>
         <li><a href="rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-1">vecLength</a>
 </li>
+        <li><a href="rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-3">xclbinPath</a>
+</li>
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -801,6 +839,13 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li>
+    xclbinPath
+
+      <ul>
+        <li><a href="rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-3">variable</a>
+</li>
+      </ul></li>
+      <li>
     xilinx_apps
 
       <ul>
@@ -828,6 +873,8 @@
         <li><a href="rst-cpp-docs/class_xilinx_apps_cosinesim_CosineSimBase.html#index-0">class</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     xilinx_apps::cosinesim::Exception
 
@@ -835,8 +882,6 @@
         <li><a href="rst-cpp-docs/class_xilinx_apps_cosinesim_Exception.html#index-0">class</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     xilinx_apps::cosinesim::ImplBase
 
@@ -889,7 +934,7 @@
   <div role="contentinfo" class="copyright">
     <p class="footerinfo">
       <span class="lastupdated">
-        Last updated on May 14, 2021.
+        Last updated on May 29, 2021.
       </span>
 
     </p>
