Added instructions to checkout submodules

--- a/genindex.html
+++ b/genindex.html
@@ -568,13 +568,13 @@
 </li>
         <li><a href="cosinesim/rst-cpp-docs/class_xilinx_apps_cosinesim_CosineSim.html#index-6">matchTargetVector</a>, <a href="cosinesim/rst-cpp-docs/class_xilinx_apps_cosinesim_CosineSimBase.html#index-6">[1]</a>, <a href="rst-cpp-docs/class_xilinx_apps_cosinesim_CosineSim.html#index-6">[2]</a>, <a href="rst-cpp-docs/class_xilinx_apps_cosinesim_CosineSimBase.html#index-6">[3]</a>
 </li>
-        <li><a href="cosinesim/rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-6">operator=</a>, <a href="rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-6">[1]</a>
+        <li><a href="cosinesim/rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-4">operator=</a>, <a href="rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-6">[1]</a>
 </li>
-        <li><a href="cosinesim/rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-4">Options</a>, <a href="cosinesim/rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-5">[1]</a>, <a href="rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-4">[2]</a>, <a href="rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-5">[3]</a>
+        <li><a href="cosinesim/rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-2">Options</a>, <a href="cosinesim/rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-3">[1]</a>, <a href="rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-4">[2]</a>, <a href="rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-5">[3]</a>
 </li>
         <li><a href="cosinesim/rst-cpp-docs/struct_xilinx_apps_cosinesim_Result.html#index-3">Result</a>, <a href="rst-cpp-docs/struct_xilinx_apps_cosinesim_Result.html#index-3">[1]</a>
 </li>
-        <li><a href="cosinesim/rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-7">setXclbinPath</a>, <a href="cosinesim/rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-8">[1]</a>, <a href="rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-7">[2]</a>, <a href="rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-8">[3]</a>
+        <li><a href="rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-7">setXclbinPath</a>, <a href="rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-8">[1]</a>
 </li>
         <li><a href="cosinesim/rst-cpp-docs/class_xilinx_apps_cosinesim_CosineSimBase.html#index-2">startLoadPopulation</a>, <a href="rst-cpp-docs/class_xilinx_apps_cosinesim_CosineSimBase.html#index-2">[1]</a>
 </li>
@@ -668,7 +668,7 @@
     numDevices
 
       <ul>
-        <li><a href="cosinesim/rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-2">variable</a>, <a href="rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-2">[1]</a>
+        <li><a href="rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-2">variable</a>
 </li>
       </ul></li>
   </ul></td>
@@ -681,7 +681,7 @@
     operator=
 
       <ul>
-        <li><a href="cosinesim/rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-6">function</a>, <a href="rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-6">[1]</a>
+        <li><a href="cosinesim/rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-4">function</a>, <a href="rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-6">[1]</a>
 </li>
       </ul></li>
   </ul></td>
@@ -690,7 +690,7 @@
     Options
 
       <ul>
-        <li><a href="cosinesim/rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-4">function</a>, <a href="cosinesim/rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-5">[1]</a>, <a href="rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-4">[2]</a>, <a href="rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-5">[3]</a>
+        <li><a href="cosinesim/rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-2">function</a>, <a href="cosinesim/rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-3">[1]</a>, <a href="rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-4">[2]</a>, <a href="rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-5">[3]</a>
 </li>
       </ul></li>
   </ul></td>
@@ -740,7 +740,7 @@
     setXclbinPath
 
       <ul>
-        <li><a href="cosinesim/rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-7">function</a>, <a href="cosinesim/rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-8">[1]</a>, <a href="rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-7">[2]</a>, <a href="rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-8">[3]</a>
+        <li><a href="rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-7">function</a>, <a href="rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-8">[1]</a>
 </li>
       </ul></li>
       <li>
@@ -804,13 +804,13 @@
       <ul>
         <li><a href="cosinesim/rst-cpp-docs/struct_xilinx_apps_cosinesim_Result.html#index-1">index</a>, <a href="rst-cpp-docs/struct_xilinx_apps_cosinesim_Result.html#index-1">[1]</a>
 </li>
-        <li><a href="cosinesim/rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-2">numDevices</a>, <a href="rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-2">[1]</a>
+        <li><a href="rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-2">numDevices</a>
 </li>
         <li><a href="cosinesim/rst-cpp-docs/struct_xilinx_apps_cosinesim_Result.html#index-2">similarity</a>, <a href="rst-cpp-docs/struct_xilinx_apps_cosinesim_Result.html#index-2">[1]</a>
 </li>
-        <li><a href="cosinesim/rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-1">vecLength</a>, <a href="rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-1">[1]</a>
+        <li><a href="rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-1">vecLength</a>
 </li>
-        <li><a href="cosinesim/rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-3">xclbinPath</a>, <a href="rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-3">[1]</a>
+        <li><a href="cosinesim/rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-1">xclbinPath</a>, <a href="rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-3">[1]</a>
 </li>
       </ul></li>
   </ul></td>
@@ -819,7 +819,7 @@
     vecLength
 
       <ul>
-        <li><a href="cosinesim/rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-1">variable</a>, <a href="rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-1">[1]</a>
+        <li><a href="rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-1">variable</a>
 </li>
       </ul></li>
   </ul></td>
@@ -845,7 +845,7 @@
     xclbinPath
 
       <ul>
-        <li><a href="cosinesim/rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-3">variable</a>, <a href="rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-3">[1]</a>
+        <li><a href="cosinesim/rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-1">variable</a>, <a href="rst-cpp-docs/struct_xilinx_apps_cosinesim_Options.html#index-3">[1]</a>
 </li>
       </ul></li>
       <li>
@@ -937,7 +937,7 @@
   <div role="contentinfo" class="copyright">
     <p class="footerinfo">
       <span class="lastupdated">
-        Last updated on August 25, 2021.
+        Last updated on October 04, 2021.
       </span>
 
     </p>
