--- a/louvainmod/overview.html
+++ b/louvainmod/overview.html
@@ -458,7 +458,7 @@ For a weighted graph, modularity is defined as:</p>
 </ul>
 <p>The Louvain algorithm is a hierarchical clustering algorithm, that recursively merges communities
 into a single node and executes the modularity clustering on the condensed graphs. The figure
-below illusrates final detected communites with 3 levels after the modularity value is maximized.</p>
+below illustrates final detected communities with 3 levels after the modularity value is maximized.</p>
 <a class="reference internal image-reference" href="../_images/louvain-hierarchy.png"><img alt="Louvain Modularity Formula" class="align-center" src="../_images/louvain-hierarchy.png" style="width: 576.5px; height: 538.0px;" /></a>
 <p>Xilinx Louvain Modularity product running on Xilinx Alveo acceleration cards greatly reduces the
 compuation time of the modularity value (Q) and memory footprint.</p>
@@ -503,7 +503,7 @@ compuation time of the modularity value (Q) and memory footprint.</p>
   <div role="contentinfo" class="copyright">
     <p class="footerinfo">
       <span class="lastupdated">
-        Last updated on August 25, 2021.
+        Last updated on October 04, 2021.
       </span>
 
     </p>
