Updated FuzzyMatch use case doc

--- a/fuzzymatch/overview.html
+++ b/fuzzymatch/overview.html
@@ -475,7 +475,7 @@ with fewer than three edits:</p>
 <p>The similarity of two strings is defined as below, where lev() is the Levenshtein
 edit distance of the strings:</p>
 <a class="reference internal image-reference" href="../_images/fuzzymatch-similarity-formula.png"><img alt="Fuzzy Match Similarity Formula" src="../_images/fuzzymatch-similarity-formula.png" style="width: 400px;" /></a>
-<p>Two strings are considered as a match if the similarity score is graeter than a
+<p>Two strings are considered as a match if the similarity score is greater than a
 user programmable threshold.</p>
 </div>
 </div>
